--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
  <a class="scroll-top bg-success" href="#"><i class="fa fa-angle-up"></i></a>
 
     <!-- Scripts -->
-    <script src="assets/js/core.min.js"></script>
-    <script src="assets/js/thesaas.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/core.min.js"></script>
+    <script src="/assets/js/thesaas.min.js"></script>
+    <script src="/assets/js/script.js"></script>
 
   </body>
 
